@@ -3,6 +3,16 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20
 
+	- The cupsLangDefault() function now works if you don't
+	  have the base OS localization installed (STR #418)
+	- The pdftops filter no longer needs to create temporary
+	  files with tmpnam (STR #406)
+	- The HTTP code did not use a case-insensitive
+	  comparison when checking for the Basic authentication
+	  method (STR #407)
+	- The httpEncode() function always added a trailing "="
+	  character, which is not required by the Base64
+	  encoding specification (STR #407)
 	- The signal handlers did not need to call sigset();
 	  this caused a recursion problem on some versions of
 	  IRIX (STR #422)
